added container class to header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<header>
+			<header class="container">
 				<h1>Notely.github.io</h1>
 				<p></p>
 
