Updated features section

--- a/index.html
+++ b/index.html
@@ -51,30 +51,31 @@
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-lg-4">
-						<h4><i class="icomoon-quill"></i> Annotate any web page</h4>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-quill red"></i> Annotate any web page</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
-					<div class="col-lg-4">
-						<h4><i class="icomoon-eye"></i> Control visibility of notes</h4>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-eye red"></i> Control visibility of notes</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
-					<div class="col-lg-4">
-						<h4><i class="icomoon-point-up"></i> Move note marker in place</h4>
+					<div class="clearfix visible-sm"></div>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-point-up red"></i> Move note in place</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4">
-						<h4><i class="icomoon-quill"></i> Feature 4</h4>
+					<div class="clearfix visible-lg"></div>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-drawer3 red"></i> Manage all notes in archive</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
-					<div class="col-lg-4">
-						<h4><i class="icomoon-eye"></i> Feature 5</h4>
+					<div class="clearfix visible-sm"></div>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-upload red"></i> Export notes</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
-					<div class="col-lg-4">
-						<h4><i class="icomoon-upload2"></i> Feature 6</h4>
+					<div class="col-lg-4 col-sm-6">
+						<h4><i class="icomoon-download red"></i> Import notes</h4>
 						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
 					</div>
 				</div>
