Fitst draft copy ready

--- a/index.html
+++ b/index.html
@@ -27,22 +27,53 @@
 				<div class="container">
 					<div class="col-lg-7">
 						<h1>Notely &mdash; Annotate the web</h1>
-						<p class="lead">Lorem ipsum Consequat dolore ea dolor fugiat voluptate in sit commodo ad voluptate nostrud labore labore.</p>
+						<p class="lead">The simplest way of taking notes on any web page directly from within your browser.</p>
 						<p><a href="#" class="btn btn-lg btn-danger">Download Now</a></p>
 					</div>
 					<div class="col-lg-5">
-						<img src="http://placehold.it/1024x768" class="img-responsive hero-img" />
+						<img src="images/screenshot.png" class="img-responsive hero-img" />
 					</div>
 				</div>
 			</header>
 			<section class="container">
 				<div class="row">
-					<div class="col-lg-12">
-						<h2>Some words from the creator</h2>
+					<!-- <div class="col-lg-12">
+						<h2>About Notely</h2>
 						<blockquote>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-							<small>Someone famous in <cite title="Source Title">Source Title</cite></small>
+							<p>If you are like me you look at hundreds of web pages every day. If so haven't you sometimes felt like you just wanted to sketch down a note about the page really quick?</p>
+							<p>Sometimes it's because you are reviewing the page for some client. Or sometimes you just want to take a note related to a specific web page so that you keep your busy mind together when researching something.</p>
+							<p>I really felt the need of some kind of tool, so I tried a lot of different tools. I didn't really fall in love with any of them. Some tools makes it possible to grab the page from the browser and then annotate it. But then you leave the browser where you spend the most of your time. Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely.</p>
+							<p>But the journey doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well.</p>
+							<small>Richard W&aring;lander, <cite title="The Creator">The Creator</cite></small>
 						</blockquote>
+					</div> -->
+					<div class="col-sm-12 col-lg-12">
+						<h2>About Notely</h2>
+					</div>
+					<div class="clearfix visible-sm visible-lg"></div>
+					<div class="col-sm-6 col-ls-6">
+						<h4>Design rational</h4>
+						<p>If you are like me you look at hundreds of web pages every day. If so haven't you sometimes felt like you just wanted to sketch down a note about the page really quick?</p>
+						<p>Sometimes it's because you are reviewing the page for some client. Or sometimes you just want to take a note related to a specific web page so that you keep your busy mind together when researching something.</p>
+						<p>I really felt the need of some kind of tool, so I tried a lot of different tools.</p>
+					</div>
+					<div class="col-sm-6 col-ls-6">
+						<h4>Story behind Notely</h4>
+						<p>I didn't really fall in love with any of the tools I found. Some tools makes it possible to grab the page from the browser and then annotate it. But then you leave the browser where you spend the most of your time.</p>
+						<p>Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely.</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<div class="well">
+						<p><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. Follow me on Github:</strong></p>
+						<p>
+							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&size=large"
+							  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
+							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&size=large"
+							  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="30"></iframe>
+						</p>
+					</div>
 					</div>
 				</div>
 				<div class="row">
@@ -53,64 +84,44 @@
 				<div class="row">
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-quill red"></i> Annotate any web page</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>Click any part of any web page and notes to it. The note will be saved even if you leave the page or close the browser. Next time you visit that page the note will be available again for you to read or edit.</p>
+						<p><a href="#">Learn how to add notes</a></p>
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-eye red"></i> Control visibility of notes</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>Sometimes you don't want to see your notes, then you can easily hide them so you don't have to bother who will see your notes. When you want them back you can toggle the visibility on again.</p>
+						<p><a href="#">Learn how hide/show notes</a></p>
 					</div>
 					<div class="clearfix visible-sm"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-point-up red"></i> Move note in place</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>To highlight a specific part of a web page it is important to be able place the note accordingly but also to be able to move the note around. Notely support moving the notes around the page.</p>
+						<p><a href="#">Learn how to move notes</a></p>
 					</div>
 					<div class="clearfix visible-lg"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-drawer3 red"></i> Manage all notes in archive</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>At some point you probably want to go through the whole inventory of note. Notely have an archive of all pages with notes so that you quickly can find all notes related to a web page.</p>
+						<p><a href="#">Learn more about the archive</a></p>
 					</div>
 					<div class="clearfix visible-sm"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-upload red"></i> Export notes</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>In order to be able to backup or share notes Notely supports exporting the notes as JSON.</p>
+						<p><a href="#">Learn how to export notes</a></p>
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-download red"></i> Import notes</h4>
-						<p>Lorem ipsum Ut dolor do adipisicing sit dolor dolor amet occaecat dolore quis labore do aute labore nisi labore sunt voluptate sunt in labore consequat labore sit consectetur minim veniam magna laborum nisi sed.</p>
+						<p>In order for you to restore notes from backup or load notes created by someone else Notely support importing notes on JSON format.</p>
+						<p><a href="#">Learn how to import and share notes</a></p>
 					</div>
 				</div>
-				<!--h3><a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-				<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-				<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-				</code></pre>
-
-				<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-				<h3><a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-				<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-				<h3><a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-				<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-				<h3><a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-				<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-				<h3><a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-				<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p-->
 			</section>
 			<footer class="">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12">
-							<p><small>Hosted on GitHub Pages</small></p>
+							<p><small>Hosted on <a href="#">GitHub Pages</a> &mdash; Creatd by <a href="#">Richard W&aring;lander</a> &copy; 2013</small></p>
 						</div>
 					</div>
 				</div>
