Added new version of screenshot att add some more spacing in index page

--- a/index.html
+++ b/index.html
@@ -39,12 +39,16 @@
 			</div>
 			<header class="">
 				<div class="container">
-					<div class="col-lg-7">
+					<div class="col-lg-12">
 						<h1>Notely &mdash; Annotate the web</h1>
+					</div>
+					<div class="col-lg-4">
+						<br>
+						<br>
 						<p class="lead">The simplest way of taking notes on any web page directly from within your browser.</p>
 						<p><a href="#" class="btn btn-lg btn-danger">Download Now</a></p>
 					</div>
-					<div class="col-lg-5">
+					<div class="col-lg-8">
 						<img src="images/screenshot.png" class="img-responsive hero-img" />
 					</div>
 				</div>
@@ -52,7 +56,9 @@
 			<section class="container">
 				<div class="row">
 					<div class="col-sm-12 col-lg-12">
-						<h2 id="about">About Notely</h2>
+						<div class="page-header">
+							<h2 id="about">About Notely</h2>
+						</div>
 					</div>
 					<div class="clearfix visible-sm visible-lg"></div>
 					<div class="col-sm-6 col-ls-6">
@@ -69,8 +75,11 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
+						<br>
 						<div class="well">
-						<p><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. Follow me on Github:</strong></p>
+						<p>
+							<br><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. Follow me on Github:</strong>
+						</p>
 						<p>
 							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&size=large"
 							  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
@@ -82,7 +91,9 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
-						<h2 id="features">Features</h2>
+						<div class="page-header">
+							<h2 id="features">Features</h2>
+						</div>
 					</div>
 				</div>
 				<div class="row">
@@ -120,6 +131,7 @@
 						<p><a href="#">Learn how to import and share notes</a></p>
 					</div>
 				</div>
+				<br>
 			</section>
 			<footer class="">
 				<div class="container">
