Added ga tracking code

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<div class="col-sm-6 col-ls-6">
 						<h4>Story behind Notely</h4>
 						<p>I didn't really fall in love with any of the tools I found. Some tools makes it possible to grab the page from the browser and then annotate it. But then you leave the browser where you spend the most of your time.</p>
-						<p>Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely.</p>
+						<p>Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely as a small weekend project.</p>
 					</div>
 				</div>
 				<div class="row">
@@ -146,5 +146,14 @@
 		<script src="javascripts/scale.fix.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
+		<script>
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+			ga('create', 'UA-45200660-1', 'notely.github.io');
+			ga('send', 'pageview');
+		</script>
 	</body>
 </html>
