Fixed a lot of links and updated some copy

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 					</div>
 					<div class="clearfix visible-sm visible-lg"></div>
 					<div class="col-sm-6 col-ls-6">
-						<h4>Design rational</h4>
+						<h4>Background</h4>
 						<p>If you are like me you look at hundreds of web pages every day. If so haven't you sometimes felt like you just wanted to sketch down a note about the page really quick?</p>
 						<p>Sometimes it's because you are reviewing the page for some client. Or sometimes you just want to take a note related to a specific web page so that you keep your busy mind together when researching something.</p>
 						<p>I really felt the need of some kind of tool, so I tried a lot of different tools.</p>
@@ -78,13 +78,11 @@
 						<br>
 						<div class="well">
 						<p>
-							<br><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. Follow me on Github:</strong>
+							<br><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. I develop Notely on my spare time so if you like it please help me out with a small donation or help me out at GitHub.</strong>
 						</p>
 						<p>
 							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&size=large"
-							  allowtransparency="true" frameborder="0" scrolling="0" width="170" height="30"></iframe>
-							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&size=large"
-							  allowtransparency="true" frameborder="0" scrolling="0" width="80" height="30"></iframe>
+							  		allowtransparency="true" frameborder="0" scrolling="0" width="160" height="30"></iframe>
 						</p>
 					</div>
 					</div>
@@ -100,35 +98,35 @@
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-quill red"></i> Annotate any web page</h4>
 						<p>Click any part of any web page and notes to it. The note will be saved even if you leave the page or close the browser. Next time you visit that page the note will be available again for you to read or edit.</p>
-						<p><a href="#">Learn how to add notes</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#add-note">Learn how to add notes</a></p>
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-eye red"></i> Control visibility of notes</h4>
 						<p>Sometimes you don't want to see your notes, then you can easily hide them so you don't have to bother who will see your notes. When you want them back you can toggle the visibility on again.</p>
-						<p><a href="#">Learn how hide/show notes</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#hideshow-notes">Learn how hide/show notes</a></p>
 					</div>
 					<div class="clearfix visible-sm"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-point-up red"></i> Move note in place</h4>
 						<p>To highlight a specific part of a web page it is important to be able place the note accordingly but also to be able to move the note around. Notely support moving the notes around the page.</p>
-						<p><a href="#">Learn how to move notes</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#move-notes-around-the-page">Learn how to move notes</a></p>
 					</div>
 					<div class="clearfix visible-lg"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-drawer3 red"></i> Manage all notes in archive</h4>
 						<p>At some point you probably want to go through the whole inventory of note. Notely have an archive of all pages with notes so that you quickly can find all notes related to a web page.</p>
-						<p><a href="#">Learn more about the archive</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#manage-archive-of-all-notes">Learn more about the archive</a></p>
 					</div>
 					<div class="clearfix visible-sm"></div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-upload red"></i> Export notes</h4>
 						<p>In order to be able to backup or share notes Notely supports exporting the notes as JSON.</p>
-						<p><a href="#">Learn how to export notes</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#export">Learn how to export notes</a></p>
 					</div>
 					<div class="col-lg-4 col-sm-6">
 						<h4><i class="icomoon-download red"></i> Import notes</h4>
 						<p>In order for you to restore notes from backup or load notes created by someone else Notely support importing notes on JSON format.</p>
-						<p><a href="#">Learn how to import and share notes</a></p>
+						<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#import">Learn how to import and share notes</a></p>
 					</div>
 				</div>
 				<br>
@@ -137,7 +135,13 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-12">
-							<p><small>Hosted on <a href="#">GitHub Pages</a> &mdash; Creatd by <a href="#">Richard W&aring;lander</a> &copy; 2013</small></p>
+							<div class="pull-left"><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Creatd by <a href="http://www.richardwalander.com">Richard W&aring;lander</a> &copy; 2013</small></div>
+							<div class="pull-right">
+								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&count=true"
+							  		allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
+								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&count=true"
+							  		allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
+							</div>
 						</div>
 					</div>
 				</div>
