Added Facebook like button

--- a/index.html
+++ b/index.html
@@ -137,10 +137,9 @@
 						<div class="col-lg-12">
 							<div class="pull-left"><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Creatd by <a href="http://www.richardwalander.com">Richard W&aring;lander</a> &copy; 2013</small></div>
 							<div class="pull-right">
-								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&count=true"
-							  		allowtransparency="true" frameborder="0" scrolling="0" width="140" height="20"></iframe>
 								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&count=true"
 							  		allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
+					  			<div class="fb-like" data-href="http://notely.github.io" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
 							</div>
 						</div>
 					</div>
@@ -159,5 +158,13 @@
 			ga('create', 'UA-45200660-1', 'notely.github.io');
 			ga('send', 'pageview');
 		</script>
+		<div id="fb-root"></div>
+		<script>(function(d, s, id) {
+		  var js, fjs = d.getElementsByTagName(s)[0];
+		  if (d.getElementById(id)) return;
+		  js = d.createElement(s); js.id = id;
+		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=435491886556651";
+		  fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));</script>
 	</body>
 </html>
