--- a/index.html
+++ b/index.html
@@ -140,6 +140,16 @@
 								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&count=true"
 							  		allowtransparency="true" frameborder="0" scrolling="0" width="90" height="20"></iframe>
 					  			<div class="fb-like" data-href="http://notely.github.io" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>
+					  			<!-- Place this tag where you want the +1 button to render. -->
+					  			<div class="g-plusone" data-size="small"></div>
+					  			<!-- Place this tag after the last +1 button tag. -->
+					  			<script type="text/javascript">
+					  			(function() {
+					  				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+					  				po.src = 'https://apis.google.com/js/plusone.js';
+					  				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+					  			})();
+					  			</script>
 							</div>
 						</div>
 					</div>
