Updated download link and promotion material

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<br>
 						<br>
 						<p class="lead">The simplest way of taking notes on any web page directly from within your browser.</p>
-						<p><a href="#" class="btn btn-lg btn-danger">Download Now</a></p>
+						<p><a href="https://chrome.google.com/webstore/detail/notely/blbcibeljnikjlegmkfmajmgjkpdndhk" class="btn btn-lg btn-danger">Download Now</a></p>
 					</div>
 					<div class="col-lg-8">
 						<img src="images/screenshot.png" class="img-responsive hero-img" />
