--- a/index.html
+++ b/index.html
@@ -1,180 +1,98 @@
-<!doctype html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="chrome=1">
-	<title>Notely - Annotate the web</title>
-
-	<!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootswatch/3.0.0/readable/bootstrap.min.css">
-	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
-	<link rel="stylesheet" href="stylesheets/pygment_trac.css">
-	<link rel="stylesheet" href="stylesheets/styles.min.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-		<!--[if lt IE 9]>
-		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-</head>
-	<body data-spy="scroll" data-target=".nav.navbar-nav" data-offset="60">
-		<div class="wrapper">
-			<div class="navbar navbar-default navbar-fixed-top">
-				<div class="container">
-					<div class="navbar-header">
-						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-							<span class="sr-only">Toggle navigation</span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-							<span class="icon-bar"></span>
-						</button>
-						<a class="brand"><img src="images/Logo-text.png" alt=""></a>
-					</div>
-					<div class="collapse navbar-collapse navbar-ex1-collapse">
-						<ul class="nav navbar-nav navbar-right">
-							<li><a href="#about">About</a></li>
-							<li><a href="#features">Features</a></li>
-						</ul>
-					</div><!-- /.navbar-collapse -->
-				</div>
-			</div>
-			<header class="">
-				<div class="container">
-					<div class="col-lg-12">
-						<h1>Notely &mdash; Annotate the web</h1>
-					</div>
-					<div class="col-lg-4">
-						<br>
-						<br>
-						<p class="lead">The simplest way of taking notes on any web page directly from within your browser.</p>
-						<p><a href="https://chrome.google.com/webstore/detail/notely/blbcibeljnikjlegmkfmajmgjkpdndhk" class="btn btn-lg btn-danger">Download Now</a></p>
-					</div>
-					<div class="col-lg-8">
-						<img src="images/screenshot.png" class="img-responsive hero-img" />
-					</div>
-				</div>
-			</header>
-			<section class="container">
-				<div class="row">
-					<div class="col-sm-12 col-lg-12">
-						<div class="page-header">
-							<h2 id="about">About Notely</h2>
-						</div>
-					</div>
-					<div class="clearfix visible-sm visible-lg"></div>
-					<div class="col-sm-6 col-ls-6">
-						<h4>Background</h4>
-						<p>If you are like me you look at hundreds of web pages every day. If so haven't you sometimes felt like you just wanted to sketch down a note about the page really quick?</p>
-						<p>Sometimes it's because you are reviewing the page for some client. Or sometimes you just want to take a note related to a specific web page so that you keep your busy mind together when researching something.</p>
-						<p>I really felt the need of some kind of tool, so I tried a lot of different tools.</p>
-					</div>
-					<div class="col-sm-6 col-ls-6">
-						<h4>Story behind Notely</h4>
-						<p>I didn't really fall in love with any of the tools I found. Some tools makes it possible to grab the page from the browser and then annotate it. But then you leave the browser where you spend the most of your time.</p>
-						<p>Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely as a small weekend project.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<br>
-						<div class="well">
-						<p>
-							<br><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. I develop Notely on my spare time so if you like it please help me out with a small donation or help me out at GitHub.</strong>
-						</p>
-						<p>
-							<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&size=large"
-							  		allowtransparency="true" frameborder="0" scrolling="0" width="160" height="30"></iframe>
-						</p>
-					</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="page-header">
-							<h2 id="features">Features</h2>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-quill red"></i> Annotate any web page</h4>
-						<p>Click any part of any web page and notes to it. The note will be saved even if you leave the page or close the browser. Next time you visit that page the note will be available again for you to read or edit.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#add-note">Learn how to add notes</a></p>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-eye red"></i> Control visibility of notes</h4>
-						<p>Sometimes you don't want to see your notes, then you can easily hide them so you don't have to bother who will see your notes. When you want them back you can toggle the visibility on again.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#hideshow-notes">Learn how hide/show notes</a></p>
-					</div>
-					<div class="clearfix visible-sm"></div>
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-point-up red"></i> Move note in place</h4>
-						<p>To highlight a specific part of a web page it is important to be able place the note accordingly but also to be able to move the note around. Notely support moving the notes around the page.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#move-notes-around-the-page">Learn how to move notes</a></p>
-					</div>
-					<div class="clearfix visible-lg"></div>
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-drawer3 red"></i> Manage all notes in archive</h4>
-						<p>At some point you probably want to go through the whole inventory of note. Notely have an archive of all pages with notes so that you quickly can find all notes related to a web page.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#manage-archive-of-all-notes">Learn more about the archive</a></p>
-					</div>
-					<div class="clearfix visible-sm"></div>
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-upload red"></i> Export notes</h4>
-						<p>In order to be able to backup or share notes Notely supports exporting the notes as JSON.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#export">Learn how to export notes</a></p>
-					</div>
-					<div class="col-lg-4 col-sm-6">
-						<h4><i class="icomoon-download red"></i> Import notes</h4>
-						<p>In order for you to restore notes from backup or load notes created by someone else Notely support importing notes on JSON format.</p>
-						<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#import">Learn how to import and share notes</a></p>
-					</div>
-				</div>
-				<br>
-			</section>
-			<footer class="">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-12">
-							<div class="pull-left"><small>Hosted on <a href="http://pages.github.com">GitHub Pages</a> &mdash; Creatd by <a href="http://www.richardwalander.com">Richard W&aring;lander</a> &copy; 2013</small></div>
-							<div class="pull-right">
-								<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=watch&count=true"
-							  		allowtransparency="true" frameborder="0" scrolling="0" width="80" height="20"></iframe>
-					  			<div class="fb-like" data-href="http://notely.github.io" data-width="The pixel width of the plugin" data-height="The pixel height of the plugin" data-colorscheme="light" data-layout="button_count" data-action="like" data-show-faces="false" data-send="false"></div>&nbsp;
-					  			<!-- Place this tag where you want the +1 button to render. -->
-					  			<div class="g-plusone" data-size="medium"></div>
-					  			<!-- Place this tag after the last +1 button tag. -->
-					  			<script type="text/javascript">
-					  			(function() {
-					  				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-					  				po.src = 'https://apis.google.com/js/plusone.js';
-					  				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-					  			})();
-					  			</script>
-							</div>
-						</div>
-					</div>
-				</div>
-			</footer>
+---
+layout: default
+title: "Notely - Annotate the web"
+---
+<header class="">
+	<div class="container">
+		<div class="col-lg-12">
+			<h1>Notely &mdash; Annotate the web</h1>
 		</div>
-		<script src="javascripts/scale.fix.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
-		<script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-			ga('create', 'UA-45200660-1', 'notely.github.io');
-			ga('send', 'pageview');
-		</script>
-		<div id="fb-root"></div>
-		<script>(function(d, s, id) {
-		  var js, fjs = d.getElementsByTagName(s)[0];
-		  if (d.getElementById(id)) return;
-		  js = d.createElement(s); js.id = id;
-		  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=435491886556651";
-		  fjs.parentNode.insertBefore(js, fjs);
-		}(document, 'script', 'facebook-jssdk'));</script>
-	</body>
-</html>
+		<div class="col-lg-4">
+			<br>
+			<br>
+			<p class="lead">The simplest way of taking notes on any web page directly from within your browser.</p>
+			<p><a href="https://chrome.google.com/webstore/detail/notely/blbcibeljnikjlegmkfmajmgjkpdndhk" class="btn btn-lg btn-danger">Download Now</a></p>
+		</div>
+		<div class="col-lg-8">
+			<img src="images/screenshot.png" class="img-responsive hero-img" />
+		</div>
+	</div>
+</header>
+<section class="container">
+	<div class="row">
+		<div class="col-sm-12 col-lg-12">
+			<div class="page-header">
+				<h2 id="about">About Notely</h2>
+			</div>
+		</div>
+		<div class="clearfix visible-sm visible-lg"></div>
+		<div class="col-sm-6 col-ls-6">
+			<h4>Background</h4>
+			<p>If you are like me you look at hundreds of web pages every day. If so haven't you sometimes felt like you just wanted to sketch down a note about the page really quick?</p>
+			<p>Sometimes it's because you are reviewing the page for some client. Or sometimes you just want to take a note related to a specific web page so that you keep your busy mind together when researching something.</p>
+			<p>I really felt the need of some kind of tool, so I tried a lot of different tools.</p>
+		</div>
+		<div class="col-sm-6 col-ls-6">
+			<h4>Story behind Notely</h4>
+			<p>I didn't really fall in love with any of the tools I found. Some tools makes it possible to grab the page from the browser and then annotate it. But then you leave the browser where you spend the most of your time.</p>
+			<p>Other tools made it possible to add notes within the page, but then they where in the way when you didn't want to see them. Because of these reasons I created Notely as a small weekend project.</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<br>
+			<div class="well">
+				<p>
+					<br><strong>But the story doesn't stop here, now I want you to help me to improve Notely so it fits your needs as well. I develop Notely on my spare time so if you like it please help me out with a small donation or help me out at GitHub.</strong>
+				</p>
+				<p>
+					<iframe src="http://ghbtns.com/github-btn.html?user=notely&repo=notely-chrome&type=follow&size=large"
+					allowtransparency="true" frameborder="0" scrolling="0" width="160" height="30"></iframe>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="page-header">
+				<h2 id="features">Features</h2>
+			</div>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-quill red"></i> Annotate any web page</h4>
+			<p>Click any part of any web page and notes to it. The note will be saved even if you leave the page or close the browser. Next time you visit that page the note will be available again for you to read or edit.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#add-note">Learn how to add notes</a></p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-eye red"></i> Control visibility of notes</h4>
+			<p>Sometimes you don't want to see your notes, then you can easily hide them so you don't have to bother who will see your notes. When you want them back you can toggle the visibility on again.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#hideshow-notes">Learn how hide/show notes</a></p>
+		</div>
+		<div class="clearfix visible-sm"></div>
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-point-up red"></i> Move note in place</h4>
+			<p>To highlight a specific part of a web page it is important to be able place the note accordingly but also to be able to move the note around. Notely support moving the notes around the page.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#move-notes-around-the-page">Learn how to move notes</a></p>
+		</div>
+		<div class="clearfix visible-lg"></div>
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-drawer3 red"></i> Manage all notes in archive</h4>
+			<p>At some point you probably want to go through the whole inventory of note. Notely have an archive of all pages with notes so that you quickly can find all notes related to a web page.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Basic-Usage#manage-archive-of-all-notes">Learn more about the archive</a></p>
+		</div>
+		<div class="clearfix visible-sm"></div>
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-upload red"></i> Export notes</h4>
+			<p>In order to be able to backup or share notes Notely supports exporting the notes as JSON.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#export">Learn how to export notes</a></p>
+		</div>
+		<div class="col-lg-4 col-sm-6">
+			<h4><i class="icomoon-download red"></i> Import notes</h4>
+			<p>In order for you to restore notes from backup or load notes created by someone else Notely support importing notes on JSON format.</p>
+			<p><a href="https://github.com/notely/notely-chrome/wiki/Export-Import#import">Learn how to import and share notes</a></p>
+		</div>
+	</div>
+	<br>
+</section>
